# Gut_HealthChatbot

./: .gitignore  README.md  ResponseRag.txt  main.py  pyproject.toml
Testing/: gut_keywords.py  preprocessing.ipynb  test.py
llm/: articledownload.py  llm_bot.ipynb
llm/gut_health_faiss_index/: index.pkl
